--- a/CDOE/index.html
+++ b/CDOE/index.html
@@ -286,11 +286,11 @@
             </div>
         </div>
 
-        <div class="admn-footer">
+    <!-- <div class="admn-footer">
             <a href="administrative-team.html" target="_blank" rel="noopener" class="btn-text-link">
             See all administrative members <span>→</span>
             </a>
-        </div>
+        </div> -->
     </section>
 
    <footer class="main-footer">
@@ -339,4 +339,5 @@
 </footer>
 
 </body>
+
 </html>
